2002-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Removed obsolete code for shrinking data structures.
	* Source/GSValue.m: attempt to correct encoding.
	* Source/NSKeyValueCoding.m: Fix termination of method names with nuls
	from report by Manuel Guesdon.
	* Source/NSDictionary.m: Implement MacOS-X compatible KVC behavior.

2002-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Improve fetching interface info on mingw ...
	ignore non-internet interfaces.
	NB. The mingw winsock2.h header is buggy ... to work properly
	you need to change the size of a struct sockaddr field from
	sa_data[14] to sa_data[22]

Tue Feb 26 18:01:26 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m: Removed all _releasedBundles machinery.
	Removed custom implementation of -release.  Retain a bundle after
	we load it.  This fixes -bundleForClass: and simplifies
	considerably the code.

	* Source/NSBundle.m: Whenever possible, use [self method] rather
	than [NSBundle method] to invoke a class method, for efficiency.

	* Source/NSBundle.m (objc_executable_location): Compute directly
	from _executable_path - using mainBundle is unsafe.
	
Tue Feb 26 17:35:03 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m (_bundle_load_callback): Completely ignore
	categories.  (Suggestion by Gerrit Van Dyk
	<GerritVD@decillion.net>).

2002-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTemplateValue.m: Implement initialize method to set the
	version of concrete classes to be that of the abstract class which
	actually performs encoding/decoding ... should correct archiving.
	Problem reported by Gerrit Van Dyk
	* Tools/GSIndex.m: tidied a little
	* Tools/GSParser.m: mark when things are implemented.
	* Tools/GSOutput.m: warn about unimplemented items.

2002-02-26  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSUnarchiver.m 
	([NSUnarchiver +classNameDecodedForArchiveClassName:]): 